--- a/index.html
+++ b/index.html
@@ -313,11 +313,12 @@
                             <tr><td>
                         <![endif]-->
                         <table class="mob_100" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="max-width:636px">
-                            <tr><td align="center">
+                            <tr>
+                                <td width="20" class="mob_disp" style="display: none">&nbsp;</td>
+                                <td align="center">
                                 <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                     <tr>
                                         <td style="padding-bottom: 24px; font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: left; color: #A4A4A4; hyphens: none;">
-                                            {{ RU_plus_disclamer_stater_points_RUB(spamBlocks) }}
                                             Дополнительная опция «Свои Плюсы в X5 Клубе» предоставляется на <a href="https://yandex.ru/legal/yandex_plus_conditions/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">условиях</a> документа «Условия подписки Яндекс Плюс», есть <a href="https://yandex.ru/legal/yandex_plus_opzii_list/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">ограничения.</a> Использование дополнительной опции возможно только при условии привязки аккаунта X5ID к учётной записи на Яндексе.
                                             <br /><br />
                                             Есть категории-исключения и иные ограничения, <a href="https://yandex.ru/legal/yandex_plus_opzii_list/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">подробнее</a> о начислении кешбэка баллами «X5 Клуба»
@@ -335,10 +336,10 @@
                                         <td align="center">
                                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                                 <tr>
-                                                    <td style="font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: left; color: #A4A4A4; hyphens: none;">
+                                                    <td width="280" style="font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: left; color: #A4A4A4; hyphens: none;">
                                                         <a href="{{ unsubscribe_link }}" target="_blank" style="color: #A4A4A4;">Отписаться от&nbsp;рассылки</a>
                                                     </td>
-                                                    <td style="font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: right; color: #A4A4A4;">
+                                                    <td width="280" style="font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: right; color: #A4A4A4;">
                                                         <span style="white-space: nowrap">&copy;&nbsp;{{ year() }},</span> Яндекс&nbsp Плюс  18+
                                                     </td>
                                                 </tr>
@@ -347,7 +348,9 @@
                                     </tr>
                                 </table>
                                 <!-- padding --><div style="height:64px; line-height:64px; font-size:8px;">&nbsp;</div>
-                            </td></tr>
+                            </td>
+                                <td width="20" class="mob_disp" style="display: none">&nbsp;</td>
+                            </tr>
                         </table>
                         <!--[if (gte mso 9)|(IE)]>
                         </td></tr>
