--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                                                     <!--[if (gte mso 9)|(IE)]><img src="line.png" width="1" height="24" border="0" alt="СВОИ ПЛЮСЫ" style="display: block;" /><![endif]--><!--[if !IE]><!--><img src="line.png" width="100%" border="0" style="max-width: 1px; display: block;" /><!--<![endif]-->
                                                                 </td>
                                                                 <td align="left" valign="middle">
-                                                                    <a href="https://plus.yandex.ru/?{{utmFull}}" target="_blank" style="font-size:20px; line-height: 26px; font-family:Arial,Tahoma,Verdana,sans-serif;color:#000000; text-decoration: none;"><!--[if (gte mso 9)|(IE)]><img src="group.png" width="78" height="26" border="0" alt="СВОИ ПЛЮСЫ" style="display: block;" /><![endif]--><!--[if !IE]><!--><img src="group.png" width="100%" border="0" alt="СВОИ ПЛЮСЫ" title="СВОИ ПЛЮСЫ" style="max-width: 78px; display: block;" /><!--<![endif]--></a>
+                                                                    <a href="https://sp.yandex.ru/x5club/?{{utmFull}}" target="_blank" style="font-size:20px; line-height: 26px; font-family:Arial,Tahoma,Verdana,sans-serif;color:#000000; text-decoration: none;"><!--[if (gte mso 9)|(IE)]><img src="group.png" width="78" height="26" border="0" alt="СВОИ ПЛЮСЫ" style="display: block;" /><![endif]--><!--[if !IE]><!--><img src="group.png" width="100%" border="0" alt="СВОИ ПЛЮСЫ" title="СВОИ ПЛЮСЫ" style="max-width: 78px; display: block;" /><!--<![endif]--></a>
                                                                 </td>
                                                             </tr></table>
                                                             <!-- padding --><div style="height: 38px; line-height: 36px; font-size:8px;">&nbsp;</div>
@@ -259,7 +259,7 @@
                                                             </tr></table>
                                                             <table width="100%" class="mob_disp" cellpadding="0" cellspacing="0" border="0" style="display: none"><tr>
                                                                 <td align="center" valign="middle">
-                                                                    <a href="https://plus.yandex.ru/?{{utmFull}}" target="_blank" style="font-size:32px; line-height: 73px; font-family:Arial,Tahoma,Verdana,sans-serif;color:#451093; text-decoration: none; font-weight: bold;text-transform: uppercase;">
+                                                                    <a href="https://sp.yandex.ru/x5club/?{{utmFull}}" target="_blank" style="font-size:32px; line-height: 73px; font-family:Arial,Tahoma,Verdana,sans-serif;color:#451093; text-decoration: none; font-weight: bold;text-transform: uppercase;">
                                                                         <img src="title_mobile.png" width="100%" border="0" alt="Свои плюсы в Х5 Клубе" title="Свои плюсы в Х5 Клубе" style="max-width: 212px; display: block;" />
                                                                     </a>
                                                                 </td>
@@ -271,8 +271,8 @@
                                                                     <!--[if (gte mso 9)|(IE)]>
                                                                     <div style="line-height:20px;">
                                                                     <![endif]-->
-                                                                    <a class="keep-black" href="https://plus.yandex.ru/my" target="_blank" style="font-size:20px;font-family:Helvetica,Arial,Tahoma,Verdana,sans-serif;color:#451093;line-height:120%; text-decoration: none; font-weight: 400;">
-                                                                        ДД.ММ спишется первый платёж: ХХХ ₽. Изменить способ оплаты или отключить дополнение к программе лояльности <span style="white-space: nowrap"> можно <span style="text-decoration: underline;"> в личном кабинете</span></span>
+                                                                    <a class="keep-black" href="https://plus.yandex.ru/?{{utmFull}}" target="_blank" style="font-size:20px;font-family:Helvetica,Arial,Tahoma,Verdana,sans-serif;color:#451093;line-height:120%; text-decoration: none; font-weight: 400;">
+                                                                        ДД.ММ спишется первый платёж: ХХХ ₽. Изменить способ оплаты или отключить дополнение к программе лояльности <span style="white-space: nowrap"> можно <span style="text-decoration: underline;" onmouseover="this.style.textDecoration='none'" onmouseout="this.style.textDecoration='underline'"> в личном кабинете</span></span>
                                                                     </a>
                                                                     <!--[if (gte mso 9)|(IE)]>
                                                                     </div>
@@ -314,21 +314,14 @@
                         <![endif]-->
                         <table class="mob_100" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="max-width:636px">
                             <tr>
-                                <td width="20" class="mob_disp" style="display: none">&nbsp;</td>
+
                                 <td align="center">
-                                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                                <table class="mob_90"  width="100%" cellpadding="0" cellspacing="0" border="0">
                                     <tr>
                                         <td style="padding-bottom: 24px; font-size: 12px; line-height: 16px; font-family: Arial, Helvetica, sans-serif; text-align: left; color: #A4A4A4; hyphens: none;">
-                                            Дополнительная опция «Свои Плюсы в X5 Клубе» предоставляется на <a href="https://yandex.ru/legal/yandex_plus_conditions/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">условиях</a> документа «Условия подписки Яндекс Плюс», есть <a href="https://yandex.ru/legal/yandex_plus_opzii_list/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">ограничения.</a> Использование дополнительной опции возможно только при условии привязки аккаунта X5ID к учётной записи на Яндексе.
+                                            Дополнительная опция «Свои Плюсы в X5 Клубе» предоставляется на <a href="https://yandex.ru/legal/yandex_plus_conditions/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">условиях</a> документа «Условия подписки Яндекс Плюс», есть <a href="https://yandex.ru/legal/yandex_plus_opzii_list/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">ограничения</a>. Использование дополнительной опции возможно только при условии привязки аккаунта X5ID к учётной записи на Яндексе.
                                             <br /><br />
-                                            Есть категории-исключения и иные ограничения, <a href="https://yandex.ru/legal/yandex_plus_opzii_list/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">подробнее</a> о начислении кешбэка баллами «X5 Клуба»
-                                            <br />
-                                            <br />
-                                            Сервисы доставки работают в соответствии с зонами доставки. Проверить зону доставки можно в мобильных приложениях сетей магазинов «Перекрёсток» и «Пятёрочка» или на сайтах <a href="https://5ka.ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">https://dostavka.5ka.ru</a>, <a href="https://www.perekrestok.ru/delivery" target="_blank" style="color:#A4A4A4; text-decoration: underline;">https://www.perekrestok.ru/delivery</a>.
-                                            <br />
-                                            <br />
-                                            Баллы «Х5 Клуба» за заказы в сервисах Яндекса начисляются при условии начисления баллов Плюса за такие заказы; есть ограничения по сервисам-участникам.
-                                            <br /><br />
+
                                             <a href="https://yandex.ru/legal/plus_loyalty/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">Условия</a> подписки. <a href="https://yandex.ru/legal/plus_loyalty/ru/" target="_blank" style="color:#A4A4A4; text-decoration: underline;">Условия</a> программы лояльности «Яндекс Плюс Кешбэк». Баллы не являются денежными средствами, при использовании баллов предоставляется скидка в сервисах Яндекса.
                                         </td>
                                     </tr>
@@ -349,7 +342,7 @@
                                 </table>
                                 <!-- padding --><div style="height:64px; line-height:64px; font-size:8px;">&nbsp;</div>
                             </td>
-                                <td width="20" class="mob_disp" style="display: none">&nbsp;</td>
+
                             </tr>
                         </table>
                         <!--[if (gte mso 9)|(IE)]>
